--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Seed project for easily getting started with express for es6",
   "scripts": {
     "start": "nodemon ./server.js --exec babel-node",
+    "scrape": "babel-node ./links.js",
     "build": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules",
     "serve": "node dist/server.js",
     "start_babel": "babel-node ./server.js --preset=babel-preset-es2015",
@@ -21,6 +22,7 @@
   ],
   "author": "Tom Yitav <tomyitav@gmail.com>",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
