--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.2",
+    "react-datasheet": "^1.3.9",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.5"
   },
