--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.15.2",
+    "bottleneck": "^2.12.2",
+    "colors": "^1.3.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
     "lodash": "^4.15.0",
