--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Seed project for easily getting started with express for es6",
   "scripts": {
     "start": "nodemon ./server.js --exec babel-node",
+    "both": "concurrently \"yarn start\" \"cd client && yarn start\" ",
     "scrape": "babel-node ./links.js",
     "build": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules",
     "serve": "node dist/server.js",
@@ -23,15 +24,19 @@
   "author": "Tom Yitav <tomyitav@gmail.com>",
   "dependencies": {
     "axios": "^0.18.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bottleneck": "^2.12.2",
     "colors": "^1.3.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.8.6",
     "morgan": "^1.8.2",
     "p-map": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
