--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "p-map": "^2.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "ramda": "^0.25.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
