--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "colors": "^1.3.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
+    "ipware": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.8.6",
