--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "nodemon ./server.js --exec babel-node",
     "both": "concurrently \"yarn start\" \"cd client && yarn start\" ",
-    "scrape": "babel-node ./links.js",
     "buildclient": "cd client && yarn build",
-    "buildboth": "yarn buildclient && yarn build && yarn copybuild",
-    "copybuild": "cp -fr client/build dist/client/build",
+    "buildboth": "yarn cleandir && yarn buildclient && yarn build && yarn copybuild",
+    "cleandir": "rm -rf dist",
+    "copybuild": "cp -fr client/build dist/client/",
     "build": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules",
     "serve": "node dist/server.js",
     "start_babel": "babel-node ./server.js --preset=babel-preset-es2015",
