--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.5.2",
+    "react-autocomplete": "^1.8.1",
     "react-datasheet": "^1.3.9",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-search-input": "^0.11.3"
   },
   "scripts": {
     "start": "react-scripts start",
