--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.5.2",
+    "mobx": "^5.5.2",
+    "mobx-devtools-mst": "^0.9.18",
+    "mobx-react": "^5.3.6",
+    "mobx-react-devtools": "^6.0.3",
+    "mobx-state-tree": "^3.7.1",
+    "react": "^16.7.0-alpha.0",
     "react-autocomplete": "^1.8.1",
     "react-datasheet": "^1.3.9",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.7.0-alpha.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-search-input": "^0.11.3"
