--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,12 @@
   "proxy": "http://localhost:4000",
   "private": true,
   "dependencies": {
+    "@vx/gradient": "^0.0.165",
+    "@vx/group": "^0.0.170",
+    "@vx/hierarchy": "^0.0.179",
+    "@vx/mock-data": "^0.0.179",
+    "@vx/scale": "^0.0.179",
+    "@vx/shape": "^0.0.179",
     "axios": "^0.18.0",
     "mobx": "^5.5.2",
     "mobx-devtools-mst": "^0.9.18",
@@ -16,7 +22,8 @@
     "react-dom": "^16.7.0-alpha.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "react-search-input": "^0.11.3"
+    "react-search-input": "^0.11.3",
+    "recharts": "^1.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
