--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-search-input": "^0.11.3",
+    "react-table": "^6.8.6",
     "recharts": "^1.3.5"
   },
   "scripts": {
