--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,9 @@
     "react-scripts": "2.0.5",
     "react-search-input": "^0.11.3",
     "react-table": "^6.8.6",
-    "recharts": "^1.3.5"
+    "rebass": "^3.0.0-9",
+    "recharts": "^1.3.5",
+    "styled-components": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
